--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 	   <a href="mailto:rivaselcapo@Gmail.com.ar" title="manda mail"> 
 	   <img class="iconos" src="imagenes/iconos/contacto.jpg"></a>
 	   <p>the last of us es una franquicia de videojuegos ambientados en el año 2033 (the last of us 1) en adelante, la saga sigue a Ellie y Joel luchando por su supervivencia en un mundo infectado por el hongo Cordyceps, luchando con infectados y otros supervivientes</p>
-      <a href= "imagenes/grandes/Home.jpg" title="ampliar" target= "_blank"> <img src="imagenes/muestra/Home.jpg"></a>
-	  <h3><a href="https://youtu.be/YwpOrsT457A" title= "introduccion del juego" target= "blank_"> video introductorio</a></h3>
+      <a href= "imagenes/grandes/Home.jpg" title="ampliar" target= "_blank"> <img src="imagenes/muestra/Home.jpg">
+      <img src="imagenes/muestra/Home.jpg"></a>
+	<a href="https://youtu.be/YwpOrsT457A" title= "introduccion del juego" target= "blank_">
+	<img class="iconos" src="imagenes/iconos/video.jpg"></a>
 	   <h2>Entregas</h2>
 	     <p>la franquicia de The last of us  esta compuesta por 3 juegos principales y algunas novelas y comics, estos son los juegos en orden cronológico:</p>
 	     <table border>
