--- a/galeria.html
+++ b/galeria.html
@@ -30,8 +30,8 @@
 	  <img src="imagenes/muestra/Joel_1.jpg"></a>
 	  <h2>Ellie</h2> 
 	  <p>Es la seudoprotagonista del primer juego y la protagonista del DLC left behind y el segundo juego, ella es inmune al cordyceps.</p>
-  <a href= "imagenes/grandes/Ellie_1.WEBP" title="ampliar" target= "blank">
-	  <img src="imagenes/muestra/Ellie_1.WEBP"></a>
+  <a href= "imagenes/grandes/Ellie_1.webp" title="ampliar" target= "blank">
+	  <img src="imagenes/muestra/Ellie_1.webp"></a>
 	  <h2>Sarah</h2>
 	  <p>La hija biologica de Joel, ella muere desangrada el dia del colapso en 2013.</p>
   <a href= "imagenes/grandes/Sarah_1.jpg" title="ampliar" target= "blank">
